[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Hylan Silva <111002592+hylansilvadev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic-settings = "^2.2.1"
firebase-admin = "^6.4.0"
firedantic = "^0.6.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
isort = "^5.13.2"
blue = "^0.9.1"
ruff = "^0.2.2"
httpx = "^0.27.0"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn api.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
